Fixed push button bug on mobile

--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ a:active {
         font-size: 1em;
     }
 
-    a:hover {
+    a:active {
         position: relative;
         top: 5px;
         -webkit-box-shadow: none !important;
